--- a/perfil.html
+++ b/perfil.html
@@ -56,12 +56,12 @@
 
           <div>
             <label class="form-label">E-mail</label>
-            <input type="email" value="carlos@exemplo.com" class="form-input">
+            <input type="email" value="carlos@gmail.com" class="form-input">
           </div>
 
           <div>
             <label class="form-label">Telefone</label>
-            <input type="tel" value="(85) 99999-9999" class="form-input">
+            <input type="tel" value="(85) 98945-6789" class="form-input">
           </div>
 
           <div>
